# CppWorkspace

./: .clang-format  .clang-tidy  .clangd  .clangd-win  .gitignore  CMakeDoctest.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUtils.txt  Constant.cmake  LICENSE  README  README.md  TODO.md  Utils.cmake  build-all.cmd  build-all.sh  build-test-all.cmd  build-test-all.sh  check-build.cmd  check-build.sh  config.yaml  main.cpp  randomDemo.h  run-checks.cmd  set_env.bat  smartPtrAndIterDemo.cpp  smartPtrAndIterDemo.h  traitDemo.cpp  traitDemo.h  vcpkg.json
_cmake_files/: Utils.cmake
archieve/standalone_import/: CMakeLists.txt  README.md
archieve/standalone_import/_build_debug/: .ninja_deps  .ninja_log  build.ninja
archieve/standalone_import/_installed/include/lib_central/: concepts_utils.h  myers_diff.h
archieve/standalone_import/_installed/lib/: central_lib_shared.lib
central_lib/src/: CMakeLists.txt  CentralLibConfig.cmake.in  DisjointSet.cpp  main.cpp  numeric_utils.cpp  numerics.cpp  proto.h  shared_link.cpp  utils.cpp
central_lib/src/public/lib_central/: DisjointSet.h  TernaryTries.hpp  concepts_utils.h  dll.h  numeric_utils.h  numerics.h  rank_search.hpp  utils.h
central_lib/tests/: CMakeLists.txt  DisjointSetTest.cpp  RankSearchTest.cpp  TernaryTriesTest.cpp  asan_leak_test.cpp  asan_out_of_range_access_test.cpp  asan_use_after_free_test.cpp  no_asan_link_test.cpp  numeric_utils_test.cpp  rank_search_test.cpp
central_lib/tests/asan/: CMakeLists.txt  asan_leak_test.cpp  asan_out_of_range_access_test.cpp  asan_use_after_free_test.cpp
chip8/: CMakeLists.txt  README.md  chip8.h  main.cpp  platform.h
cuda_demo/: CMakeLists.txt  hello_world.cu
cuda_demos/: CMakeLists.txt  main.cu  zero_copy.cu
lib_central/src/: CMakeLists.txt  DisjointSet.cpp  locality_demo.cpp  main.cpp  numerics.cpp  proto.h  utils.cpp
lib_central/src/include/lib_central/: utils.h
lib_central/src/public/lib_central/: DisjointSet.h  TernaryTries.hpp  proto.h  utils.h
lib_central/tests/: CMakeLists.txt  DisjointSetTest.cpp  RankSearchTest.cpp  TernaryTriesTest.cpp
lisp/: CMakeLists.txt  InputPort.cpp  InputPort.h  InputPortTest.cpp  Interpreter.cpp  Interpreter.h  env.cpp  env.h  exceptions.h  func.cpp  func.h  lisp.cpp  utils.h  values.cpp  values.h
misc/: CMakeLists.txt  claire_voyant.cpp  co_generator.cpp  co_task.cpp  interleve.cpp  locality_demo.cpp  param_inherit.cpp
net_prog/: CMakeLists.txt  dgram_sock_client.c  dgram_sock_serv.c  etcp.h  simplec.c  simples.c  skel.h  sock_tutor.c  stream_sock_serv.c  tcp_client_template.c  tcpclient.c  tcpserver.c  udp_client_template.c  udp_server_template.c  utils.c  vrc.c  vrs.c
net_prog/lib/: readn.c  readvrec.c  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
opengl_learn/: CMakeLists.txt  README.md  preclude.h  system_check.cpp  window.cpp  wireframe.cpp
opengl_learn/demos/: PBR_disney.cpp  PBR_disney_irradiance_map.cpp  animation.cpp  blend_transparent.cpp  camera_texture_box.cpp  cascaded_shadow_mapping.cpp  custom_normal_map.cpp  deferred_shading.cpp  error_handling.cpp  font_ttf.cpp  framebuffer_rearview.cpp  geometry_shader_normal.cpp  hdr_bloom.cpp  hdr_tone_mapping.cpp  image_based_lighting.cpp  instanced_asteroids.cpp  model_import.cpp  msaa_framebuffer.cpp  parallax_occlusion_mapping.cpp  pbr_area_light.cpp  pbr_bloom.cpp  phong.cpp  phong_light_casters.cpp  screen_space_ambient_occlusion.cpp  shadow_cubmap.cpp  shadow_map.cpp  skybox.cpp  stencil_outline.cpp  terrain_tessellation.cpp  texture.cpp  texture_box_anime.cpp  weighted_OIT.cpp
opengl_learn/demos/shaders/: 2.2.1.brdf.fs  5.3.parallax_mapping.fs  6.2.skybox.vs  7.multi_area_light.fs  8.2.deferred_shading.fs
opengl_learn/includes/: colors.hpp  model.h  model_animation.h
pmpp/: CMakeLists.txt  README.md  conv.h  conv2d.cu  conv2d.h  conv2d_test.cpp  conv_test.cpp  device_prop.cu  hist.cu  hist.h  hist_test.cpp  mat_mul.cu  mat_mul.h  mat_mul_test.cpp  mat_mul_tiling.cu  mat_mul_tiling.h  mat_mul_tiling_test.cpp  merge_sort.cu  merge_sort.h  merge_sort_test.cpp  prefix_sum.cu  prefix_sum.h  prefix_sum_test.cpp  reduce.cu  reduce.h  reduce_test.cpp  utils.h  vec_add.cu  vec_add.h  vec_add_test.cpp
pmpp/examples/: CMakeLists.txt  device_prop.cu  utils.h  vec_add.cu  vec_add.h  vec_add_test.cpp
ray_trace/: CMakeLists.txt  Camera.h  README.md  camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  rt.cpp  rtweekend.h  sphere.h  vec3.h
ray_trace/cuda/: Camera.h  Hittable.h  HittableList.h  Material.h  Ray.h  Sphere.h  Vec3.h  main.cu  rt_cuda.cu  rtweekend.h  utils.h  write_color.h
ray_trace/openmp/: camera.h  color.h  hittable.h  hittable_list.h  lib.cpp  material.h  ray.h  rt_omp.cpp  rtweekend.h  sphere.h  vec3.h
src/algo_cpp/: CMakeLists.txt
src/algo_cpp/src/: CMakeLists.txt  DisjointSet.cpp  numerics.cpp
src/algo_cpp/tests/: CMakeLists.txt  DisjointSetTest.cpp  RankSearchTest.cpp
src/demos/: CMakeLists.txt  constantsDemo.h  importsTest.cpp  linked_graph_prototype.cpp  randomDemo.cpp  randomDemo.h  smartPtrAndIterDemo.cpp  templateDemo.cpp  traitDemo.cpp  traitDemo.h  tupleDestructionDemo.cpp  tupleDestructiondemo.h
src/demos/include/demos/: constantsDemo.h  importsTest.h  randomDemo.h  smartPtrAndIterDemo.h  templateDemo.h  traitDemo.h  tupleDestructiondemo.h
src/learncpp/: CMakeLists.txt  main.cpp
src/lib_central/src/: CMakeLists.txt  DisjointSet.cpp  numerics.cpp  utils.cpp
src/lib_central/tests/: CMakeLists.txt  DisjointSetTest.cpp  RankSearchTest.cpp
src/numerics/: CMakeLists.txt  numerics.cpp
src/numerics/include/euler/: numerics.h
src/org/nathan/Euler/: CMakeLists.txt
src/org/nathan/demos/: CMakeLists.txt
src/utils/: CMakeLists.txt  miscellaneous.cpp  utils.cpp
src/utils/include/miscellaneous/: miscellaneous.h
src/utils/include/utils/: miscellaneous.h  utils.h
standalone_import/: CMakeLists.txt  CMakePresets.json  README.md  test_import.cpp
workspace_pch/: CMakeLists.txt
workspace_pch/headers/: cuda_pch.h  workspace_test_pch.h
workspace_pch/include/: workspace_pch.h
(+175 files in other folders)
